# EncrTxt

./: .gitignore.txt  CMakeLists.txt  EncryptorTxt.sln  EncryptorTxt.vcxproj  EncryptorTxt.vcxproj.filters  change format pixels.cpp  classes.h  create png.cpp  cryptograthy.cpp  functions.h  get pixels.cpp  handler read.cpp  handler write.cpp  main.cpp  png.cpp  postprocessing_pixels.cpp  preprocessing_pixels.cpp  search pixels.cpp  user interface.cpp  work with chunks.cpp  work with files.cpp
zlib/zlib-1.3.1/: zdll.exp  zdll.lib  zlib.lib
